--- a/backend/plotting_with_indicators_bar_pi.ipynb
+++ b/backend/plotting_with_indicators_bar_pi.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9f92e837",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -*- coding: utf-8 -*- \n",
     "import dash                     # pip install dash\n",
     "from dash.dependencies import Input, Output, State\n",
     "from dash import dcc\n",
@@ -29,10 +30,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "52819505",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>year</th>\n",
+       "      <th>scope1_intensity</th>\n",
+       "      <th>scope2_intensity</th>\n",
+       "      <th>scope3_intensity</th>\n",
+       "      <th>scope_1</th>\n",
+       "      <th>scope_2</th>\n",
+       "      <th>scope_3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Fine Spending(in €)</th>\n",
+       "      <th>Total Number of Employees</th>\n",
+       "      <th>Employee Turnover(%)</th>\n",
+       "      <th>Total share of Female Employees</th>\n",
+       "      <th>Share of Female Employees in Management</th>\n",
+       "      <th>Employee Parental Percentage</th>\n",
+       "      <th>Employee Tenure</th>\n",
+       "      <th>Share of Employees Under 30 Years Old</th>\n",
+       "      <th>Share of Employees Over 50 Years Old</th>\n",
+       "      <th>Training spending(in €)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Kion Group AG</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>67900000.0</td>\n",
+       "      <td>4800000.0</td>\n",
+       "      <td>21300000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53122.0</td>\n",
+       "      <td>664025.000000</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Kion Group AG</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>72600000.0</td>\n",
+       "      <td>4800000.0</td>\n",
+       "      <td>22700000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55047.0</td>\n",
+       "      <td>500427.272700</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>36.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Gerresheimer AG</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>280410.0</td>\n",
+       "      <td>272082.0</td>\n",
+       "      <td>410060.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10447.0</td>\n",
+       "      <td>15.181392</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>20.20000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Gerresheimer AG</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>275334.0</td>\n",
+       "      <td>285092.0</td>\n",
+       "      <td>304024.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9880.0</td>\n",
+       "      <td>11.973684</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>18.00000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Gerresheimer AG</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>264803.0</td>\n",
+       "      <td>282724.0</td>\n",
+       "      <td>297051.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>72</td>\n",
+       "      <td>Deutsche Bank</td>\n",
+       "      <td>Financial Services</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50273.0</td>\n",
+       "      <td>104671.0</td>\n",
+       "      <td>2127013.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>87597.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>77</td>\n",
+       "      <td>Fresenius</td>\n",
+       "      <td>Health care</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>578000.0</td>\n",
+       "      <td>946000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>316078.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>77</td>\n",
+       "      <td>Fresenius</td>\n",
+       "      <td>Health care</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>536000.0</td>\n",
+       "      <td>976000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>311269.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>77</td>\n",
+       "      <td>Fresenius</td>\n",
+       "      <td>Health care</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>522000.0</td>\n",
+       "      <td>982000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>294134.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Siemens Healthineers AG</td>\n",
+       "      <td>Health care</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.0</td>\n",
+       "      <td>245000.0</td>\n",
+       "      <td>3243000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55526.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>11.82329</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>79 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id                     name            Industry  year  scope1_intensity  \\\n",
+       "0   31            Kion Group AG         Industrials  2020               NaN   \n",
+       "1   31            Kion Group AG         Industrials  2019               NaN   \n",
+       "2   22          Gerresheimer AG         Industrials  2021               NaN   \n",
+       "3   22          Gerresheimer AG         Industrials  2020               NaN   \n",
+       "4   22          Gerresheimer AG         Industrials  2019               NaN   \n",
+       "..  ..                      ...                 ...   ...               ...   \n",
+       "74  72            Deutsche Bank  Financial Services  2019               NaN   \n",
+       "75  77                Fresenius         Health care  2021               NaN   \n",
+       "76  77                Fresenius         Health care  2020               NaN   \n",
+       "77  77                Fresenius         Health care  2019               NaN   \n",
+       "78  48  Siemens Healthineers AG         Health care  2021               NaN   \n",
+       "\n",
+       "    scope2_intensity  scope3_intensity     scope_1    scope_2     scope_3  \\\n",
+       "0                NaN               NaN  67900000.0  4800000.0  21300000.0   \n",
+       "1                NaN               NaN  72600000.0  4800000.0  22700000.0   \n",
+       "2                NaN               NaN    280410.0   272082.0    410060.0   \n",
+       "3                NaN               NaN    275334.0   285092.0    304024.0   \n",
+       "4                NaN               NaN    264803.0   282724.0    297051.0   \n",
+       "..               ...               ...         ...        ...         ...   \n",
+       "74               NaN               NaN     50273.0   104671.0   2127013.0   \n",
+       "75               NaN               NaN    578000.0   946000.0         NaN   \n",
+       "76               NaN               NaN    536000.0   976000.0         NaN   \n",
+       "77               NaN               NaN    522000.0   982000.0         NaN   \n",
+       "78               NaN               NaN    106000.0   245000.0   3243000.0   \n",
+       "\n",
+       "    ...  Fine Spending(in €)  Total Number of Employees  Employee Turnover(%)  \\\n",
+       "0   ...                  NaN                    53122.0         664025.000000   \n",
+       "1   ...                  NaN                    55047.0         500427.272700   \n",
+       "2   ...                  NaN                    10447.0             15.181392   \n",
+       "3   ...                  NaN                     9880.0             11.973684   \n",
+       "4   ...                  NaN                        NaN                   NaN   \n",
+       "..  ...                  ...                        ...                   ...   \n",
+       "74  ...                  NaN                    87597.0                   NaN   \n",
+       "75  ...                  NaN                   316078.0                   NaN   \n",
+       "76  ...                  NaN                   311269.0                   NaN   \n",
+       "77  ...                  NaN                   294134.0                   NaN   \n",
+       "78  ...                  NaN                    55526.0                   NaN   \n",
+       "\n",
+       "    Total share of Female Employees  Share of Female Employees in Management  \\\n",
+       "0                              17.2                                      NaN   \n",
+       "1                              16.7                                      NaN   \n",
+       "2                              30.8                                 20.20000   \n",
+       "3                              33.3                                 18.00000   \n",
+       "4                               NaN                                      NaN   \n",
+       "..                              ...                                      ...   \n",
+       "74                             46.3                                      NaN   \n",
+       "75                             69.0                                      NaN   \n",
+       "76                             68.0                                      NaN   \n",
+       "77                             68.0                                      NaN   \n",
+       "78                             31.0                                 11.82329   \n",
+       "\n",
+       "    Employee Parental Percentage  Employee Tenure  \\\n",
+       "0                            NaN              NaN   \n",
+       "1                            NaN              NaN   \n",
+       "2                            NaN              NaN   \n",
+       "3                            NaN              NaN   \n",
+       "4                            NaN              NaN   \n",
+       "..                           ...              ...   \n",
+       "74                           NaN              NaN   \n",
+       "75                           NaN              NaN   \n",
+       "76                           NaN              NaN   \n",
+       "77                           NaN              NaN   \n",
+       "78                           NaN              NaN   \n",
+       "\n",
+       "    Share of Employees Under 30 Years Old  \\\n",
+       "0                                    10.6   \n",
+       "1                                    11.7   \n",
+       "2                                     NaN   \n",
+       "3                                     NaN   \n",
+       "4                                     NaN   \n",
+       "..                                    ...   \n",
+       "74                                   15.1   \n",
+       "75                                    NaN   \n",
+       "76                                    NaN   \n",
+       "77                                    NaN   \n",
+       "78                                   28.0   \n",
+       "\n",
+       "    Share of Employees Over 50 Years Old  Training spending(in €)  \n",
+       "0                                   38.1                      NaN  \n",
+       "1                                   36.5                      NaN  \n",
+       "2                                    NaN                      NaN  \n",
+       "3                                    NaN                      NaN  \n",
+       "4                                    NaN                      NaN  \n",
+       "..                                   ...                      ...  \n",
+       "74                                  29.2                      NaN  \n",
+       "75                                   NaN                      NaN  \n",
+       "76                                   NaN                      NaN  \n",
+       "77                                   NaN                      NaN  \n",
+       "78                                  18.0                      NaN  \n",
+       "\n",
+       "[79 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1 = pd.read_csv(\"Group2Data.csv\")\n",
     "\n",
@@ -58,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fd34cb22",
    "metadata": {},
    "outputs": [],
@@ -103,10 +518,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "3123286a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app '__main__' (lazy loading)\n",
+      " * Environment: production\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:8050 (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
    "source": [
     "@app.callback(Output(component_id=\"output-div\", component_property=\"children\"),\n",
     "              \n",
@@ -283,8 +721,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
